# glito

./: .gitignore  ABOUT-NLS  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  mkinstalldirs
doc/: Makefile.am  Makefile.in  manual_en.html  manual_eo.html  manual_fr.html
po/: ChangeLog  POTFILES.in  eo.gmo  eo.po  fr.gmo  fr.po  glito.pot
src/: Engine.cpp  Engine.hpp  Formula.cpp  Formula.hpp  Function.cpp  Function.hpp  Glito.cpp  Glito.hpp  Image.cpp  Image.hpp  ImageGray.cpp  ImageGray.hpp  IndentedString.cpp  IndentedString.hpp  Main.cpp  Makefile.am  Makefile.in  Skeleton.cpp  Skeleton.hpp
